<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressUpdateActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="68dp"
        android:text="@string/update_address"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/house_info"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/field_background_orange"
        android:drawableStart="@drawable/ic_home"
        android:drawablePadding="10dp"

        android:hint="@string/house_building_apartment"
        android:paddingStart="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:inputType="text"
        />


    <EditText
        android:id="@+id/street_info"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/field_background_orange"
        android:drawableStart="@drawable/ic_road"
        android:drawablePadding="10dp"
        android:hint="@string/street_road_lane"
        android:textStyle="bold"

        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_info"
        android:inputType="text"/>

    <EditText
        android:id="@+id/area_info"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/field_background_orange"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="10dp"
        android:textStyle="bold"

        android:hint="@string/area_locality_sector"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_info"
        android:inputType="text"/>
    <EditText
        android:id="@+id/landmark_info"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/field_background_orange"
        android:drawableStart="@drawable/ic_landmark"
        android:drawablePadding="10dp"
        android:textStyle="bold"
        android:hint="@string/landmark"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area_info"
        android:inputType="text"/>

    <EditText
        android:id="@+id/city_info"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/field_background_orange"
        android:drawableStart="@drawable/ic_city"
        android:drawablePadding="10dp"

        android:hint="@string/village_town_city"
        android:textStyle="bold"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landmark_info"
        android:inputType="text"/>


    <ImageView
        android:id="@+id/update_add"
        android:layout_width="65dp"
        android:layout_height="61dp"
        android:src="@drawable/ic_tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_info"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/click_button_to_update_address" />


</androidx.constraintlayout.widget.ConstraintLayout>