<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".UserVerifyActivity">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/operator_login_image"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ProgressBar
        android:id="@+id/otp_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <EditText
        android:id="@+id/aadhaar_number"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/field_background"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/aadhaar_number"
        android:inputType="number"
        android:paddingStart="16dp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image" />


    <Button
        android:id="@+id/generate_otp_btn"
        android:layout_width="317dp"
        android:layout_height="53.01dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="#f78b28"
        android:text="@string/generate_otp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aadhaar_number" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/field_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/enter_otp"
        android:inputType="numberPassword"
        android:paddingStart="16dp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_otp_btn" />


    <Button
        android:id="@+id/verify_otp_btn"
        android:layout_width="317dp"
        android:layout_height="53.01dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="#f78b28"
        android:text="@string/verify_otp"
        android:textAllCaps="false"

        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/didn_t_receive_the_otp"
        android:textColor="#616161"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_otp_btn" />

    <TextView
        android:id="@+id/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/resend_otp"
        android:textColor="@color/blue"
        android:textFontWeight="300"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_otp_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>