<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/operator_image"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/operator_login_image"
        android:src="@drawable/ic_operator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/operator_id"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:autofillHints="username"
        android:background="@drawable/field_background"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operator_image" />

    <EditText
        android:id="@+id/operator_password"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints="password"
        android:background="@drawable/field_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:drawingCacheQuality="high"
        android:hint="@string/password"


        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operator_id"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="317dp"
        android:layout_height="53.01dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="#f78b28"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operator_password" />

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        android:layout_marginTop="150dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>